[gd_scene load_steps=15 format=3 uid="uid://b4e2rifpuiiuo"]

[ext_resource type="Script" path="res://Movecharacter_body_3d.gd" id="1_jaiad"]
[ext_resource type="PackedScene" uid="uid://bqrjkylgm5rvb" path="res://MapDrawer/draw_mesh_ray_cast_3d.tscn" id="3_1rpke"]
[ext_resource type="PackedScene" uid="uid://crpy1o55lqirx" path="res://RigthPathDetector/detect_rigth_path_ray_cast.tscn" id="3_72sra"]
[ext_resource type="PackedScene" uid="uid://dougrx573rp4j" path="res://MapDrawer/map_ui.tscn" id="3_yllf8"]
[ext_resource type="Script" path="res://RigthPathDetector/rigth_path_manager.gd" id="5_242mt"]
[ext_resource type="PackedScene" uid="uid://jckg1ixi2u0b" path="res://RigthPathDetector/rigth_path_collider.tscn" id="6_7dcbm"]
[ext_resource type="PackedScene" uid="uid://ngf0lrixrxgq" path="res://RigthPathDetector/end_path_collider.tscn" id="7_w5usb"]

[sub_resource type="BoxShape3D" id="BoxShape3D_hbi52"]

[sub_resource type="ViewportTexture" id="ViewportTexture_yq17i"]
viewport_path = NodePath("CharacterBody3D/Camera3D/Map2d/SubViewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_2jwj5"]
resource_local_to_scene = true
albedo_texture = SubResource("ViewportTexture_yq17i")

[sub_resource type="QuadMesh" id="QuadMesh_6a27v"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_5dqe0"]

[sub_resource type="BoxShape3D" id="BoxShape3D_s4x01"]

[sub_resource type="BoxMesh" id="BoxMesh_p2vnu"]

[node name="MainDrawerMapTest" type="Node3D"]

[node name="CharacterBody3D" type="CharacterBody3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00433269, 1.43455, 0.0693493)
axis_lock_linear_y = true
script = ExtResource("1_jaiad")

[node name="CollisionShape3D" type="CollisionShape3D" parent="CharacterBody3D"]
shape = SubResource("BoxShape3D_hbi52")

[node name="DrawMeshRayCast3D" parent="CharacterBody3D" instance=ExtResource("3_1rpke")]

[node name="DetectRigthPathRayCastD2" parent="CharacterBody3D" instance=ExtResource("3_72sra")]

[node name="Camera3D" type="Camera3D" parent="CharacterBody3D"]
transform = Transform3D(1, 0, 0, 0, 0.790155, 0.612907, 0, -0.612907, 0.790155, 0, 1.417, 2.531)
fov = 64.6875

[node name="Map2d" type="Node3D" parent="CharacterBody3D/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 0.998828, -0.0483966, 0, 0.0483966, 0.998828, -0.013134, 0.150993, -1.39617)

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D/Camera3D/Map2d"]
material_override = SubResource("StandardMaterial3D_2jwj5")
mesh = SubResource("QuadMesh_6a27v")

[node name="SubViewport" type="SubViewport" parent="CharacterBody3D/Camera3D/Map2d"]
size = Vector2i(2880, 2160)

[node name="MapUI" parent="CharacterBody3D/Camera3D/Map2d/SubViewport" instance=ExtResource("3_yllf8")]
texture_repeat = 2

[node name="MeshInstance3D" type="MeshInstance3D" parent="CharacterBody3D"]
transform = Transform3D(-0.601171, 0, 0, 0, -0.568608, 0, 0, 0, 0.629751, 0, 0, 0)
mesh = SubResource("CapsuleMesh_5dqe0")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.920948, 0.389687, 0, -0.389687, 0.920948, 0, 5.08983, -3.43127)

[node name="floor" type="Area3D" parent="."]
transform = Transform3D(-100, 1.50996e-07, 1.50996e-05, -1.50996e-05, -1, 0, 1.50996e-05, -2.27997e-14, 100, 50.2531, 0, 50.094)

[node name="CollisionShape3D" type="CollisionShape3D" parent="floor"]
shape = SubResource("BoxShape3D_s4x01")

[node name="MeshInstance3D" type="MeshInstance3D" parent="floor"]
mesh = SubResource("BoxMesh_p2vnu")
skeleton = NodePath("../..")

[node name="RigthPathManager" type="Node3D" parent="."]
script = ExtResource("5_242mt")

[node name="ColliderConteiner" type="Node3D" parent="RigthPathManager"]

[node name="RigthPathCollider" parent="RigthPathManager/ColliderConteiner" instance=ExtResource("6_7dcbm")]

[node name="EndPathCollider" parent="RigthPathManager" instance=ExtResource("7_w5usb")]

[connection signal="NewColliderPoint" from="CharacterBody3D/DrawMeshRayCast3D" to="CharacterBody3D/Camera3D/Map2d/SubViewport/MapUI" method="RefreshLine"]
[connection signal="OnEndPath" from="CharacterBody3D/DetectRigthPathRayCastD2" to="RigthPathManager" method="EndPath"]
